--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Privacy Policy</h1>
   <p>Vaše osobní údaje zpracováváme pouze pro potřeby aplikace Kurzy WebApp. Data nikomu nepředáváme a nepoužíváme k jiným účelům.</p>
-  <p>Kontakt: tvoj@email.cz</p>
+  <p>Kontakt: tomas.scorematch@gmail.com</p>
 </body>
 </html>
